--- a/hax-editable.html
+++ b/hax-editable.html
@@ -5,8 +5,7 @@
 <!--
 `hax-editable`
 
-
-@demo demo/index.html 
+@demo demo/index.html
 -->
 
 <dom-module id="hax-editable">
@@ -19,23 +18,52 @@
         position: relative;
         z-index: 11;
       }
-      
+
     </style>
-    
-    <div contenteditable$="{{edit}}">
-      <content></content>
-    </div>
+
+    <template is="dom-if" if="{{matchType('textfield', type)}}">
+      <div contenteditable$="{{edit}}">
+        <content></content>
+      </div>
+    </template>
+    <template is="dom-if" if="{{matchType('html', type)}}">
+      <div contenteditable$="{{edit}}">
+        <content></content>
+      </div>
+    </template>
+    <!-- future support for date/time and other items that would have a modal pop up state -->
   </template>
 
   <script>
     Polymer({
-
       is: 'hax-editable',
-
       properties: {
+        /**
+         * whether this item is currently in the "edit" state
+         */
         edit: {
           type: Boolean,
         },
+        /**
+         * type of field to display the edit mode for
+         */
+        type: {
+          type: String,
+          value: 'textfield',
+        }
+      },
+      /**
+       * Simple boolean output for string comparison of editable element type
+       * @param  {string} test     the test case
+       * @param  {string} type     the type to match
+       * @return {boolean}         if the test case is the same as the type
+       */
+      matchType: function(test, type) {
+        // see if they match
+        if (test == type) {
+          return true;
+        }
+        return false;
       }
     });
   </script>
